feat(backend): implement business logic modules
- Add Approval Module (Request, Step)
- Add Vacation/Attendance Module (Balance, Log)
- Add Payroll Module (Stub)
- Configure settings.gradle for new modules
- Add Backend Phase 3 report

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -7,3 +7,6 @@ include 'modules:approval'
 include 'modules:tenant'
 include 'modules:org'
 include 'queries'
+include 'modules:vacation'
+include 'modules:attendance'
+include 'modules:payroll'
