feat(backend): configure main app and validation
- Add 'app' module with HrSystemApplication
- Configure application.yml for Docker MySQL
- Add OrgChartQueryServiceTest (Unit Test)
- Update settings.gradle
- Add Backend Phase 4 report

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -9,4 +9,5 @@ include 'modules:org'
 include 'queries'
 include 'modules:vacation'
 include 'modules:attendance'
-include 'modules:payroll'
+include 'app'
+
