--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -9,5 +9,6 @@ include 'modules:org'
 include 'queries'
 include 'modules:vacation'
 include 'modules:attendance'
+include 'modules:payroll'
 include 'app'
 
