--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,35 @@ services:
       - "1025:1025" # SMTP
       - "8025:8025" # Web UI
     restart: always
+
+  # 4. Backend (Spring Boot Dev)
+  hr-backend-dev:
+    image: gradle:8.5-jdk17
+    container_name: hr-backend-dev
+    working_dir: /app
+    volumes:
+      - ./backend:/app
+      - gradle_cache:/home/gradle/.gradle
+    ports:
+      - "8080:8080"
+    command: gradle :app:bootRun --args='--spring.profiles.active=dev'
+    depends_on:
+      - hr-db
+      - hr-redis
+
+  # 5. Frontend (Next.js Dev)
+  hr-frontend-dev:
+    image: node:18-alpine
+    container_name: hr-frontend-dev
+    working_dir: /app
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    command: sh -c "npm install && npm run dev"
+    depends_on:
+      - hr-backend-dev
+
+volumes:
+  gradle_cache:
