--- a/backend/modules/policy/build.gradle
+++ b/backend/modules/policy/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
