feat: implement backend vacation module & approval integration

--- a/backend/modules/vacation/build.gradle
+++ b/backend/modules/vacation/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     implementation project(':common')
+    implementation project(':modules:approval')
+
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
