--- a/backend/modules/payroll/build.gradle
+++ b/backend/modules/payroll/build.gradle
@@ -1,8 +1,10 @@
 dependencies {
     implementation project(':common')
+    implementation project(':modules:user')
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     
     compileOnly 'org.projectlombok:lombok'
