docs: sync db schema with running db state (init.sql, spec, plan, report)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - NEXT_PUBLIC_API_URL=http://localhost:8080/api
+      - NEXT_PUBLIC_API_URL=/api
     ports:
       - "3000:3000"
     command: sh -c "npm install && npm run dev"
