refactor: normalize backend module structure for evaluation and asset modules

--- a/backend/app/build.gradle
+++ b/backend/app/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation project(':modules:vacation')
     implementation project(':modules:attendance')
     implementation project(':modules:payroll')
+    implementation project(':modules:evaluation')
+    implementation project(':modules:asset')
     implementation project(':queries')
     
     implementation 'org.springframework.boot:spring-boot-starter-web'
