--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,13 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+bootJar {
+    enabled = false
+}
+jar {
+    enabled = false
+}
+
 allprojects {
     group = 'com.hr'
     version = '0.0.1-SNAPSHOT'
