feat(backend): implement notification module and event infrastructure

--- a/backend/app/build.gradle
+++ b/backend/app/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation project(':modules:payroll')
     implementation project(':modules:evaluation')
     implementation project(':modules:asset')
+    implementation project(':modules:notification')
     implementation project(':queries')
     
     implementation 'org.springframework.boot:spring-boot-starter-web'
