--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -12,5 +12,6 @@ include 'modules:attendance'
 include 'modules:payroll'
 include 'modules:evaluation'
 include 'modules:asset'
+include 'modules:notification'
 include 'app'
 
