refactor(frontend): implement user context with zustand and bind real dashboard data

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
-    "swr": "^2.3.7"
+    "swr": "^2.3.7",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.0.0",
