--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - hr-redis
 
   # 5. Frontend (Next.js Dev)
+  # 5. Frontend (Next.js Dev + Storybook support)
   hr-frontend-dev:
     image: node:20-alpine
     container_name: hr-frontend-dev
@@ -59,11 +60,15 @@ services:
       - /app/node_modules
     environment:
       - NEXT_PUBLIC_API_URL=/api
+      - IS_DOCKER=true
     ports:
       - "3000:3000"
+      - "6006:6006"
     command: sh -c "npm install && npm run dev"
     depends_on:
       - hr-backend-dev
 
 volumes:
   gradle_cache:
+
+
