--- a/backend/modules/evaluation/build.gradle
+++ b/backend/modules/evaluation/build.gradle
@@ -9,3 +9,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 }
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
