feat: fix approval inbox/pending api and frontend integration

--- a/backend/modules/approval/build.gradle
+++ b/backend/modules/approval/build.gradle
@@ -9,7 +9,16 @@ dependencies {
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+}
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
