docs: Update HR system guide with ArchUnit enforcement, module isolation, and a two-track task execution protocol.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,9 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         
+        // [NEW] ArchUnit Architecture Testing
+        testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
+        
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
     }
