feat: implement core logic remediation (Recruitment, Payroll Tax, Notification Async)

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -13,5 +13,6 @@ include 'modules:payroll'
 include 'modules:evaluation'
 include 'modules:asset'
 include 'modules:notification'
+include 'modules:recruitment'
 include 'app'
 
