feat(backend): implement and verify full remediation plan (Phase 1-4) This commit completes the comprehensive backend remediation task, reinforcing the Modular Monolith architecture and CQRS pattern across four phases. Phase 1: Approval Module Enhancement - Implemented multi-stage approval chains and optimistic locking (@Version). - Refactored logic from controllers to services for strict layering. Phase 2: Tenant Management & Provisioning - Added admin impersonation support via JWT claims (isImpersonated). - Implemented event-driven provisioning for new tenants (initial admin/root dept). Phase 3: Dashboard (Read Layer) Implementation - Created aggregate statistics APIs in the 'queries' module (CQRS). - Implemented headcount, approval counts, and attendance stats with multi-tenancy. Phase 4: Architecture Verification & Stability - Enforced strict module isolation and layering via ArchUnit tests. - Refactored all controllers to remove direct repository dependencies. - Replaced Lombok with manual code in 'approval' module to resolve build issues. Verification & Documentation: - Passed all ArchUnit and integration tests (TenantProvisioning, DashboardQuery). - Added detailed plans and completion reports in 'docs/' directory. - Updated HISTORY_INDEX.md with total progress.

--- a/backend/queries/build.gradle
+++ b/backend/queries/build.gradle
@@ -2,10 +2,15 @@ dependencies {
     implementation project(':common')
     
     // Dependencies on Domain Modules if needed for Entities (though Queries usually use raw SQL DTOs, they might share some types)
-    // implementation project(':modules:org') 
+    implementation project(':modules:user')
+    implementation project(':modules:org')
+    implementation project(':modules:approval')
+    implementation project(':modules:attendance')
+    // etc.
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
