--- a/backend/modules/tenant/build.gradle
+++ b/backend/modules/tenant/build.gradle
@@ -1,8 +1,12 @@
 dependencies {
     implementation project(':common')
     
+    implementation project(':modules:user')
+    implementation project(':modules:org')
+    
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     
     compileOnly 'org.projectlombok:lombok'
