--- a/backend/modules/vacation/build.gradle
+++ b/backend/modules/vacation/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     implementation project(':common')
     implementation project(':modules:approval')
+    implementation project(':modules:user')
+
 
     
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
